metadata/objects/Digital_Sales_Aid__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <label>Document Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <label>Digital Sales Aid</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Digital Sales Aid Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Digital Sales Aids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>